--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@ body {
     font-family: Roboto, 
     "Helvetica Neue", sans-serif; 
     height: 100%;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 
